Other movies cards

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,3 +4,9 @@
     <featured-content></featured-content>
   </div>
 </header>
+
+<section class="featured-resources">
+  <div class="container">
+    <resource-card ng-repeat="resource in vm.resources" resource="resource"></resource-card>
+  </div>
+</section>
