--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -19,6 +19,11 @@ img {
   max-width: 100%;
 }
 
+.home {
+  background-color: #f5f5f5;
+  padding-bottom: 56px;
+}
+
 /* Grid */
 
 .container {
@@ -87,6 +92,13 @@ button {
   padding: 12px;
   border-radius: 5px;
   border: 2px rgba(255, 255, 255, 0.7) solid;
+}
+.button.watch-trailer-button.small {
+  padding: 6px 8px;
+}
+.button.watch-trailer-button.dark {
+  border-color: rgba(84, 43, 173, 0.75);
+  color: rgba(84, 43, 173, 0.75);
 }
 .button.watch-trailer-button .material-icons {
   margin-right: 8px;
@@ -190,14 +202,14 @@ header .hero:before {
 }
 
 .featured-content h1 {
-  font-size: 72px;
+  font-size: 3.75vw;
   line-height: 1.6;
   font-weight: 600;
   margin: 8px 0 16px;
 }
 
 .featured-content h2 {
-  font-size: 24px;
+  font-size: 1.25vw;
   font-weight: 200;
   padding-left: 100px;
   position: relative;
@@ -225,4 +237,57 @@ header .hero:before {
 
 .featured-content .button {
   margin-top: 50px;
+}
+
+/* Resource Card */
+resource-card {
+  display: inline-flex;
+  width: 100%;
+  min-width: 280px;
+  max-width: 280px;
+  margin: 8px 16px;
+}
+resource-card .card-wrapper {
+  padding: 12px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 4px 0 35px 0 rgba(44, 52, 125, 0.1);
+}
+resource-card .card-image-wrapper {
+  width: 100%;
+  padding-bottom: 66.12%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 7px 7px 0 0;
+}
+resource-card .card-image-wrapper img {
+  position: absolute;
+  width: auto;
+  max-width: none;
+  height: 100%;
+}
+resource-card .card-text-wrapper {
+  padding: 12px;
+  line-height: 1.6;
+}
+resource-card .card-text-title {
+  font-size: 2.4em;
+  color: rgba(50, 3, 150, 0.75);
+  margin: 8px 0 16px;
+}
+resource-card .card-text-caption {
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.57);
+}
+resource-card .card-actions {
+  padding: 6px 12px;
+}
+
+.featured-resources {
+  margin-top: -189px;
+}
+
+.featured-resources, .featured-resources .container {
+  display: flex;
+  overflow: visible;
 }
