--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -34,6 +34,16 @@ img {
   z-index: 1;
 }
 
+.layout-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.layout-align-space-between-center {
+  justify-content: space-between;
+  align-items: center;
+}
+
 /* Assets - buttons */
 
 button {
@@ -51,7 +61,8 @@ button {
   transition: .2s ease-in-out;
 }
 
-.button:focus, .button:active {
+.button:focus, .button:active,
+button:focus, button:active {
   outline: none;
 }
 .button:hover {
@@ -79,12 +90,15 @@ button {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  font-size: 24px;
 }
 
 .button.icon-button.light {
   background-color: rgba(255, 255, 255, 0.87);
   color: rgba(0, 0, 0, 0.75);
-  font-size: 24px;
+}
+.button.icon-button.dark {
+  color: rgba(0, 0, 0, 0.75);
 }
 
 .button.watch-trailer-button {
@@ -102,6 +116,13 @@ button {
 }
 .button.watch-trailer-button .material-icons {
   margin-right: 8px;
+}
+
+/* Typography */
+.dialog-title {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.87);
 }
 
 
@@ -269,6 +290,7 @@ resource-card .card-image-wrapper img {
 resource-card .card-text-wrapper {
   padding: 12px;
   line-height: 1.6;
+  height: 270px;
 }
 resource-card .card-text-title {
   font-size: 2.4em;
@@ -285,9 +307,47 @@ resource-card .card-actions {
 
 .featured-resources {
   margin-top: -189px;
+  margin-left: -40px;
 }
 
 .featured-resources, .featured-resources .container {
   display: flex;
   overflow: visible;
+}
+
+/* Play trailer dialog */
+
+dialog-player {
+  display: block;
+}
+
+dialog-player .backfade {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+dialog-player .modal-wrapper {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 1);
+  display: inline-block;
+}
+
+dialog-player .header {
+  width: 100%;
+  padding: 5px 10px;
+  border-bottom: 1px #eee solid;
+}
+
+dialog-player .body {
+  width: 875px;
+  height: 500px;
+  padding: 10px;
 }
