--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,12 +1,20 @@
 <header>
   <div class="hero" style="background-image: url(src/images/got-hero-img.jpg)">
     <navbar></navbar>
-    <featured-content></featured-content>
+    <featured-content resource="vm.featured"></featured-content>
   </div>
 </header>
 
 <section class="featured-resources">
-  <div class="container">
+  <div class="container resources">
     <resource-card ng-repeat="resource in vm.resources" resource="resource"></resource-card>
   </div>
 </section>
+<div class="container layout-row layout-align-space-between-center">
+  <button class="icon-button dark">
+    <i class="material-icons">chevron_left</i>
+  </button>
+  <button class="icon-button dark">
+    <i class="material-icons">chevron_right</i>
+  </button>
+</div>
