--- a/public/components/featuredContent.html
+++ b/public/components/featuredContent.html
@@ -9,9 +9,9 @@
       Play trailer
     </button>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button class="button light watch-trailer-button ghost" ng-click="$ctrl.seeDetails()">
+    <button class="button light watch-trailer-button ghost" ui-sref="home.resource({ resourceId: $ctrl.resource._id })">
       <i class="play-button material-icons">info_outline</i>
-      See more details
+      See reviews
     </button>
   </div>
 </div>
