--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -22,6 +22,7 @@ img {
 .home {
   background-color: #f5f5f5;
   padding-bottom: 56px;
+  min-height: 100vh;
 }
 
 /* Grid */
@@ -215,6 +216,26 @@ header .hero:before {
   position: absolute;
 }
 
+navbar.light-bg {
+  display: block;
+  margin-bottom: 60px;
+}
+
+navbar.light-bg .main-nav:after {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+navbar.light-bg .logo {
+  color: #000;
+}
+
+navbar.light-bg .logo span:after {
+  background-color: #000;
+}
+navbar.light-bg .logo span:after,
+navbar.light-bg .logo span:before {
+  border-color: #000;
+}
+
  /* Featured show */
 
 .featured-content {
@@ -389,7 +410,15 @@ dialog-player .body, .dialog-player .body {
 
 .input-container input, .input-container textarea {
   width: 100%;
-  padding: 8px 0;
+  padding: 8px;
+  border: 1px #eee solid;
+  transition: all .2s ease-out;
+  outline: 0;
+  box-shadow: none;
+}
+.input-container input:focus,
+.input-container textarea:focus {
+  border-color: indigo;
 }
 
 .input-container input[type="radio"] {
@@ -406,4 +435,33 @@ dialog-player .body, .dialog-player .body {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
+}
+
+.no-reviews {
+  text-align: center;
+  margin: 40px auto;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.comments {
+  width: 66%;
+}
+
+.submit-comment {
+  width: 33%;
+}
+
+.submit-comment .input-container {
+  margin: 20px 0;
+}
+
+.submit-comment .button {
+  float: right;
+  margin-right: 20px;
+}
+
+.submit-comment:after {
+  content: '';
+  display: block;
+  clear: both;
 }
